# PyAiNetwork

./: LICENSE  README.md  pyproject.toml  setup.cfg
PyAiNetwork/: PyAiNetwork.py  PyAiNetwork_CORE.py  __init__.py  erormanager.py
src/: erormanager.py
