[metadata]
name = PyAiNetwork
version = 0.3.6
author = eyes-studio
description = PyAiNetwork is a lightweight library for creating and training small to medium-sized neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eyes-studio/PyAiNetwork
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
include_package_data = True